--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.CheckoutActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="landscape">
+        <activity
+                android:name=".activity.CheckoutActivity"
+                android:configChanges="orientation"
+                android:screenOrientation="landscape">
         </activity>
     </application>
 
